[gd_scene load_steps=50 format=2]

[ext_resource path="res://Sprites/characters/phantom_death.png" type="Texture" id=1]
[ext_resource path="res://Sprites/characters/phantom_attack.png" type="Texture" id=2]
[ext_resource path="res://Sprites/characters/phantom_walk.png" type="Texture" id=3]
[ext_resource path="res://Sprites/characters/phantom_idle.png" type="Texture" id=4]
[ext_resource path="res://Scripts/Snake.gd" type="Script" id=5]
[ext_resource path="res://Scenes/HealthBar.tscn" type="PackedScene" id=7]
[ext_resource path="res://Sounds/kill.wav" type="AudioStream" id=8]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 4 )
region = Rect2( 80, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 4 )
region = Rect2( 160, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 4 )
region = Rect2( 0, 80, 80, 80 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 4 )
region = Rect2( 80, 80, 80, 80 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 4 )
region = Rect2( 160, 80, 80, 80 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 4 )
region = Rect2( 0, 160, 80, 80 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 4 )
region = Rect2( 80, 160, 80, 80 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 4 )
region = Rect2( 160, 160, 80, 80 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 4 )
region = Rect2( 0, 240, 80, 80 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 2 )
region = Rect2( 80, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 2 )
region = Rect2( 160, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 2 )
region = Rect2( 0, 80, 80, 80 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 2 )
region = Rect2( 80, 80, 80, 80 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 2 )
region = Rect2( 160, 80, 80, 80 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 2 )
region = Rect2( 0, 160, 80, 80 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 2 )
region = Rect2( 80, 160, 80, 80 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 2 )
region = Rect2( 160, 160, 80, 80 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 2 )
region = Rect2( 0, 240, 80, 80 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 1 )
region = Rect2( 80, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 1 )
region = Rect2( 160, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 1 )
region = Rect2( 0, 80, 80, 80 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 1 )
region = Rect2( 80, 80, 80, 80 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 1 )
region = Rect2( 160, 80, 80, 80 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 1 )
region = Rect2( 0, 160, 80, 80 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 1 )
region = Rect2( 80, 160, 80, 80 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 1 )
region = Rect2( 160, 160, 80, 80 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 1 )
region = Rect2( 0, 240, 80, 80 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 3 )
region = Rect2( 80, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 3 )
region = Rect2( 0, 80, 80, 80 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 3 )
region = Rect2( 80, 80, 80, 80 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 3 )
region = Rect2( 0, 160, 80, 80 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 3 )
region = Rect2( 80, 160, 80, 80 )

[sub_resource type="SpriteFrames" id=37]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": false,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ) ],
"loop": false,
"name": "attack",
"speed": 5.0
}, {
"frames": [ SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ) ],
"loop": false,
"name": "dead",
"speed": 10.0
}, {
"frames": [ SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ) ],
"loop": false,
"name": "walk1",
"speed": 8.0
}, {
"frames": [ SubResource( 35 ), SubResource( 36 ) ],
"loop": true,
"name": "walk2",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=38]
extents = Vector2( 6.09373, 9.50422 )

[sub_resource type="Animation" id=39]
length = 0.1
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=40]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=41]
length = 0.2

[sub_resource type="RectangleShape2D" id=42]
extents = Vector2( 40, 5 )

[node name="Snake" type="KinematicBody2D"]
script = ExtResource( 5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -0.116802, 1.67447 )
scale = Vector2( 0.3, 0.3 )
frames = SubResource( 37 )
animation = "idle"
frame = 6
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.310001, 2.74797 )
shape = SubResource( 38 )

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( 6.36206, 0.970001 )
enabled = true
cast_to = Vector2( 1, 12 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 8.71981, 2.5625 )

[node name="Killed" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )
volume_db = -17.0

[node name="InvulnerabillityTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/damage = SubResource( 39 )
anims/flash = SubResource( 40 )
anims/rest = SubResource( 41 )

[node name="HealthBar" parent="." instance=ExtResource( 7 )]
margin_left = -9.74125
margin_top = -13.5362
margin_right = 30.2588
margin_bottom = 26.4638
rect_scale = Vector2( 0.08, 0.1 )

[node name="Vision" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Vision"]
position = Vector2( 40, 0 )
shape = SubResource( 42 )
[connection signal="healt_updated" from="." to="HealthBar" method="_on_Snake_healt_updated"]
[connection signal="max_health" from="." to="HealthBar" method="_on_Snake_max_health"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="InvulnerabillityTimer" to="." method="_on_InvulnerabillityTimer_timeout"]
